[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "aiomysql>=0.2.0",
    "cryptography>=44.0.1",
    "factory-boy>=3.3.3",
    "greenlet>=3.1.1",
    "pymysql>=1.1.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.38",
]
