[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "aiomysql>=0.2.0",
    "backoff>=2.2.1",
    "cryptography>=44.0.1",
    "greenlet>=3.1.1",
    "psycopg[binary]>=3.2.5",
    "pymysql>=1.1.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.38",
]
